src/plugins/clangcodemodel/clangcodemodel.pro
@@ -33,6 +33,7 @@ SOURCES += \
     clangprojectsettings.cpp \
     clangprojectsettingswidget.cpp \
     clangtextmark.cpp \
+    clanguiheaderondiskmanager.cpp \
     clangutils.cpp
 
 HEADERS += \
@@ -64,6 +65,7 @@ HEADERS += \
     clangprojectsettings.h \
     clangprojectsettingswidget.h \
     clangtextmark.h \
+    clanguiheaderondiskmanager.h \
     clangutils.h
 
 FORMS += clangprojectsettingswidget.ui
